Fix floats breaking stuff on mobile

--- a/src/presentation/index.scss
+++ b/src/presentation/index.scss
@@ -142,6 +142,7 @@ main {
 section {
   // trap floats inside:
   display: flow-root;
+  clear: both;
 }
 
 blockquote {
